benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExp_Add_DivMod_iter5_error.log
=== Verification Error - Iteration 5 ===
File: benchmarks/verus/bignum/files/bignum_ModExp_Add_DivMod.rs
Time: 2025-09-15 10:53:50

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_impl.rs:99:20
   |
99 |         let diff = shifted_divisor.len() as int - padded_remainder.len() as int;
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_impl.rs:99:51
   |
99 |         let diff = shifted_divisor.len() as int - padded_remainder.len() as int;
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find function `mod_multiply` in this scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_impl.rs:189:22
    |
189 |             result = mod_multiply(result, base, sz);
    |                      ^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `mod_multiply` in this scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_impl.rs:192:16
    |
192 |         base = mod_multiply(base, base, sz);
    |                ^^^^^^^^^^^^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_impl.rs:99:20
   |
99 |         let diff = shifted_divisor.len() as int - padded_remainder.len() as int;
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_impl.rs:99:51
   |
99 |         let diff = shifted_divisor.len() as int - padded_remainder.len() as int;
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find function `mod_multiply` in this scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_impl.rs:189:22
    |
189 |             result = mod_multiply(result, base, sz);
    |                      ^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `mod_multiply` in this scope
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_impl.rs:192:16
    |
192 |         base = mod_multiply(base, base, sz);
    |                ^^^^^^^^^^^^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
